force-app/main/default/objects/dupcheck__dcAudit__c/dupcheck__dcAudit__c.object-meta.xml
<CustomObject>
    <label>Plauti Deduplicate Audit</label>
    <nameField>
        <displayFormat>DC-AUDIT-{000000}</displayFormat>
        <label>Plauti Deduplicate Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plauti Deduplicate Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>