force-app/main/default/objects/dupcheck__dcAudit__c/fields/dupcheck__AuditDate__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__AuditDate__c</fullName>
    <label>Audit Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>