force-app/main/default/objects/dupcheck__dcAudit__c/fields/dupcheck__Data__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Data__c</fullName>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>