force-app/main/default/objects/dupcheck__dcAudit__c/fields/dupcheck__Method__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Method__c</fullName>
    <label>Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>