force-app/main/default/objects/dupcheck__dcAudit__c/fields/dupcheck__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__ObjectId__c</fullName>
    <externalId>true</externalId>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>