force-app/main/default/objects/dupcheck__dcAudit__c/fields/dupcheck__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__ObjectName__c</fullName>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>