force-app/main/default/objects/dupcheck__dcAudit__c/fields/dupcheck__Prefix__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Prefix__c</fullName>
    <label>Object Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>