force-app/main/default/objects/dupcheck__dcAudit__c/fields/dupcheck__RecordId__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__RecordId__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>