force-app/main/default/objects/dupcheck__dcAudit__c/fields/dupcheck__RelatedIds__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__RelatedIds__c</fullName>
    <label>Related Records Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>