force-app/main/default/objects/dupcheck__dcAudit__c/fields/dupcheck__TypeString__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__TypeString__c</fullName>
    <externalId>true</externalId>
    <label>Type String</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>